--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=HRM
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/HRM?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=837535Abc@
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
